--- a/1.html
+++ b/1.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -12,27 +11,30 @@
     <title>Le Oisif Agressif numéro 1</title>
 </head>
 <body>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-1">
-                <a href="/index.html"> <img src="/img/oisif.png" alt="oisif agressif"></a>
-            </div>
-            <div class="col-sm">
-                <h1>Oisif Agressif n°1</h1>
-            </div>
-        </div>        <ul>
-            <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
-            <a href="https://www.instagram.com/dernierechanceeditions/" target = "_blank">instagram.com/dernierechanceeditions/</a></li>
-
-            <li><b>Illustratrice invitée : </b>Ekkynox
-            <a href="https://www.etsy.com/fr/shop/Ekkynox" target = "_blank">etsy.com/fr/shop/Ekkynox</a></li>
-
-            <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
-        </ul>
-
-        <iframe style="width:100%; height:800px;" src="//e.issuu.com/embed.html#32831657/58758964" frameborder="0" allowfullscreen></iframe>
+<div class="container">
+    <div class="row">
+        <div class="col-1">
+            <a href="/index.html"> <img src="/img/oisif.png" alt="oisif agressif"></a>
+        </div>
+        <div class="col-sm">
+            <h1>Oisif Agressif n°1</h1>
+        </div>
     </div>
+    <ul>
+        <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
+            <a href="https://www.instagram.com/dernierechanceeditions/" target="_blank">instagram.com/dernierechanceeditions/</a>
+        </li>
+
+        <li><b>Illustratrice invitée : </b>Ekkynox
+            <a href="https://www.etsy.com/fr/shop/Ekkynox" target="_blank">etsy.com/fr/shop/Ekkynox</a></li>
+
+        <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target="_blank">octokunst.tumblr.com/</a>
+        </li>
+    </ul>
+
+    <iframe style="width:100%; height:800px;" src="//e.issuu.com/embed.html#32831657/58758964" frameborder="0"
+            allowfullscreen></iframe>
+</div>
 </body>
 <footer class="footer">
 
