--- a/2.html
+++ b/2.html
@@ -13,29 +13,32 @@
 </head>
 <body>
 
-        <div class="container">
-            <div class="row">
-            <div class="col-1">
-                <a href="index.html"> <img src="img/oisif.png" alt="oisif agressif"></a>
-            </div>
-                <div class="col-sm">
-                    <h1>Oisif Agressif n°2</h1>
-                </div>
-            </div>
-        <ul>
-            <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
-                <a href="https://www.instagram.com/dernierechanceeditions/" target = "_blank">instagram.com/dernierechanceeditions/</a></li>
-
-            <li><b>Illustrateur invité : </b>moins273virgule15
-                <a href="https://www.instagram.com/moins273virgule15/" target = "_blank">instagram.com/moins273virgule15/</a></li>
-
-            <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
-        </ul>
-
-        <div data-configid="32831657/58764903" style="width:100%; height:800px;" class="issuuembed"></div>
-        <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
-
+<div class="container">
+    <div class="row">
+        <div class="col-1">
+            <a href="index.html"> <img src="img/oisif.png" alt="oisif agressif"></a>
+        </div>
+        <div class="col-sm">
+            <h1>Oisif Agressif n°2</h1>
+        </div>
     </div>
+    <ul>
+        <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
+            <a href="https://www.instagram.com/dernierechanceeditions/" target="_blank">instagram.com/dernierechanceeditions/</a>
+        </li>
+
+        <li><b>Illustrateur invité : </b>moins273virgule15
+            <a href="https://www.instagram.com/moins273virgule15/" target="_blank">instagram.com/moins273virgule15/</a>
+        </li>
+
+        <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target="_blank">octokunst.tumblr.com/</a>
+        </li>
+    </ul>
+
+    <div data-configid="32831657/58764903" style="width:100%; height:800px;" class="issuuembed"></div>
+    <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
+
+</div>
 </body>
 <footer class="footer">
 
