--- a/3.html
+++ b/3.html
@@ -13,61 +13,72 @@
 </head>
 <body>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-1">
-                <a href="index.html"> <img src="img/oisif.png" alt="oisif agressif"></a>
-            </div>
-            <div class="col-sm">
-                <h1>Oisif Agressif n°3</h1>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-1">
+            <a href="index.html"> <img src="img/oisif.png" alt="oisif agressif"></a>
         </div>
-        <ul>
-            <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
-                <a href="https://www.instagram.com/dernierechanceeditions/" target="_blank">instagram.com/dernierechanceeditions/</a>
-            </li>
-
-            <li><b>Illustratrice invitée : </b>Sainte Mathilde
-                <a href="https://www.instagram.com/sainte_mathilde/" target="_blank">instagram.com/sainte_mathilde/</a>
-            </li>
-            <li><b>Invité jeux et playlist : </b>Seb And The Rhaadicks
-                <a href="http://sebandtherhaadicks.tumblr.com/" target="_blank">sebandtherhaadicks.tumblr.com/</a></li>
-
-            <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/"
-                                              target="_blank">octokunst.tumblr.com/</a></li>
-        </ul>
-        <div data-configid="32831657/63049562" style="width:100%; height:800px;" class="issuuembed"></div>
-        <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
-        <div class="row">
-
-<!-- TODO
-        <div class="card" style="width: 18rem;">
-                <a href="">
-                    <img class="card-img-top" src="img/Oisif-agressif-K7.jpg" alt="Compil train">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">K7 du train</h5>
-                    <a href="">
-                        <p class="card-text">Ecouter la compil spéciale train. Merci Radix !</p>
-                    </a>
-                </div>
-        </div>-->
-
-        <div class="card" style="width: 18rem;">
-
-                <a href="/soluce.html">
-                    <img class="card-img-top" src="img/solucessoluces.png" alt="mystères">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">Les soluces</h5>
-                    <a href="/soluce.html">
-                        <p class="card-text">Les soluces des jeux. Merci Radix (bis) !</p>
-                    </a>
-                </div>
-
-            </div>
+        <div class="col-sm">
+            <h1>Oisif Agressif n°3</h1>
         </div>
-
     </div>
+    <ul>
+        <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
+            <a href="https://www.instagram.com/dernierechanceeditions/" target="_blank">instagram.com/dernierechanceeditions/</a>
+        </li>
+
+        <li><b>Illustratrice invitée : </b>Sainte Mathilde
+            <a href="https://www.instagram.com/sainte_mathilde/" target="_blank">instagram.com/sainte_mathilde/</a>
+        </li>
+        <li><b>Invité jeux et playlist : </b>Seb And The Rhaadicks
+            <a href="http://sebandtherhaadicks.tumblr.com/" target="_blank">sebandtherhaadicks.tumblr.com/</a></li>
+
+        <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/"
+                                          target="_blank">octokunst.tumblr.com/</a></li>
+    </ul>
+    <div data-configid="32831657/63049562" style="width:100%; height:800px;" class="issuuembed"></div>
+    <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
+    <div class="row">
+
+        <!-- TODO
+                <div class="card" style="width: 18rem;">
+                        <a href="">
+                            <img class="card-img-top" src="img/Oisif-agressif-K7.jpg" alt="Compil train">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">K7 du train</h5>
+                            <a href="">
+                                <p class="card-text">Ecouter la compil spéciale train. Merci Radix !</p>
+                            </a>
+                        </div>
+                </div>-->
+
+        <div class="card" style="width: 18rem;">
+
+            <a href="/soluce.html">
+                <img class="card-img-top" src="img/solucessoluces.png" alt="mystères">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Les soluces</h5>
+                <a href="/soluce.html">
+                    <p class="card-text">Les soluces des jeux. Merci Radix (bis) !</p>
+                </a>
+            </div>
+
+        </div>
+    </div>
+
+</div>
 </body>
+
+<footer class="footer">
+
+    <div class="container">
+
+        <span class="text-muted"><a href="https://www.instagram.com/oisifagressif/?hl=fr" target="_blank">Suis-nous sur instagram <i
+                class="fab fa-instagram"></i> et gagne des points de Karma !</a></span>
+    </div>
+
+</footer>
+
 </html>
